# repspectre-lite

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  accelerometer_handler.cc  accelerometer_handler.h  bleSetup.cpp  bleSetup.h  common.h  constants.cc  constants.h  gap.cpp  gap.h  gatt_svc.cpp  gatt_svc.h  gesture_predictor.cc  gesture_predictor.h  idf_component.yml  lopaka_64_64_28f_copy_1.h  lopaka_64_64_28f_copy_3.h  magic-wand.cc  main_functions.cc  output_handler.cc  output_handler.h  screen.cc  screen.h  sensor_data.cc  sensor_data.h  sensor_init.cc  sensor_init.h  ui_state_machine.cc
train/train/: REFACTORING_PLAN.md  data_augmentation.py  data_load.py  data_prepare.py  data_split.py  pyproject.toml
train/train/data/: Dataset.md
train/train/models/: README.md
train/train/models/model1_detectDeviceOnBarbell/: README.md  data_analyze.ipynb  organizeSqlDataIntoFiles.ipynb
train/train/models/model1_detectDeviceOnBarbell/scripts/: data_augmentation.py  train.ipynb
train/train/models/model2_detectFloorPull/: main.py  organizeSqlDataIntoFiles.ipynb  organizeSqlDataIntoFiles.md
train/train/models/model2_detectFloorPull/scripts/: data_load.py  data_split.py  train.py
train/train/src/lift_ml/: config.py
train/train/src/lift_ml/data/: augment.py  ingestion.py  loader.py  prepare_dataset.py  split.py
train/train/src/lift_ml/models/: cnn.py  lstm.py  model_builder.py
train/train/tests/: data_augmentation_test.py  data_load_test.py  data_prepare_test.py  data_split_test.py  trainer_test.py
(+124 files in other folders)
